src/objects/Property_Contract_Break__c.object
<CustomObject>
    <fields>
        <fullName>Break_Applied__c</fullName>
        <label>Break Applied</label>
        <picklist>
            <picklistValues>
                <fullName>Specific Break Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any time during the term upon expiry of the Break Notice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Break_Comments__c</fullName>
        <label>Break Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Break_Date__c</fullName>
        <label>Break Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Break_Notice_Months__c</fullName>
        <label>Break Notice (Months)</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Notice_Date_Ongoing__c</fullName>
        <formula>IF( NOT( ISPICKVAL( Break_Applied__c , &quot;Specific Break Date&quot;) ) ,
DATE(year(TODAY())+ floor((month(TODAY()) + Break_Notice_Months__c + 3)/12) + if(and(month(TODAY())=12,Break_Notice_Months__c + 3&gt;=12),-1,0),
if( mod( month(TODAY()) + Break_Notice_Months__c + 3 , 12 ) = 0, 12 , mod( month(TODAY()) + Break_Notice_Months__c + 3 , 12 )),
min(
day(TODAY()),
case(
if( mod( month(TODAY()) + Break_Notice_Months__c + 3, 12 ) = 0, 12 , mod( month(TODAY()) + Break_Notice_Months__c + 3 , 12 )),
9,30,
4,30,
6,30,
11,30,
2,(if(mod(year(TODAY()), 4) = 0, 29, 28)),
31))),
NULL)</formula>
        <label>Estimated Break Date Ongoing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Notice_Date__c</fullName>
        <formula>DATE (

/*YEAR*/
YEAR (Break_Date__c) - FLOOR(Break_Notice_Months__c / 12) - IF (MONTH (Break_Date__c) - MOD(Break_Notice_Months__c, 12) &gt; 0, 0, 1),

/*MONTH*/
IF (MONTH (Break_Date__c) - MOD (Break_Notice_Months__c, 12) &gt; 0, MONTH (Break_Date__c) - MOD (Break_Notice_Months__c, 12), MONTH (Break_Date__c) - MOD (Break_Notice_Months__c, 12) + 12),

/*DAY*/
MIN (DAY (Break_Date__c),
CASE (
/* Month */
IF (MONTH (Break_Date__c) - MOD (Break_Notice_Months__c, 12) &gt; 0, MONTH (Break_Date__c) - MOD (Break_Notice_Months__c, 12), MONTH (Break_Date__c) - MOD (Break_Notice_Months__c, 12) + 12), 9, 30, 4, 30, 6, 30, 11, 30, 2,
/* return max days for February dependent on if end date is leap year */
IF (MOD (YEAR (Break_Date__c) - FLOOR(Break_Notice_Months__c / 12) - IF (MONTH (Break_Date__c) - MOD(Break_Notice_Months__c, 12) &gt; 0, 0, 1), 400) = 0 || (MOD (YEAR (Break_Date__c) - FLOOR(Break_Notice_Months__c / 12) - IF (MONTH (Break_Date__c) - MOD(Break_Notice_Months__c, 12) &gt; 0, 0, 1) ,4) = 0 &amp;&amp; MOD (YEAR (Break_Date__c) - FLOOR(Break_Notice_Months__c / 12) - IF (MONTH (Break_Date__c) - MOD(Break_Notice_Months__c, 12) &gt; 0, 0, 1) ,100) &lt;&gt; 0 ), 29, 28), 31)
)
)/* End of Date function */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_in_breach_of_lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not in breach of lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PropertyContractBreakOption__c</fullName>
        <formula>Property_Contract__r.Early_Break_Option__c</formula>
        <label>PropertyContractBreakOption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Contract__c</fullName>
        <label>Property Contract</label>
        <referenceTo>Property_Contract__c</referenceTo>
        <relationshipLabel>Property Contracts Break</relationshipLabel>
        <relationshipName>Property_Contracts_Break</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rent_Paid_up_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rent Paid up to date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacant_Possession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacant Possession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_can_break_lease_early__c</fullName>
        <label>Who can break lease early?</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord or Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Property Contract Break</label>
    <nameField>
        <displayFormat>BN-{00}</displayFormat>
        <label>Break Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Contracts Break</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Break_date_Required</fullName>
        <active>true</active>
        <description>If  Break applied is a specific break date</description>
        <errorConditionFormula>ISPICKVAL( Break_Applied__c , &quot;Specific Break Date&quot;) &amp;&amp;  ISBLANK( Break_Date__c )</errorConditionFormula>
        <errorDisplayField>Break_Date__c</errorDisplayField>
        <errorMessage>Enter the Break date if Break Applied is a Specific Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Break_date_not_exists_for_any_time_break</fullName>
        <active>true</active>
        <description>Break date can&apos;t be filled if the Break Applied is Anytime during the term upon expiry of Break notice</description>
        <errorConditionFormula>ISPICKVAL( Break_Applied__c , &quot;Any time during the term upon expiry of the Break Notice&quot;) &amp;&amp;  NOT( ISBLANK( Break_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Break_Date__c</errorDisplayField>
        <errorMessage>Break date can&apos;t be filled if the Break Applied is Anytime during the term upon expiry of Break Notice</errorMessage>
    </validationRules>
</CustomObject>